spacing fix

--- a/services/ui-src/src/styles/index.scss
+++ b/services/ui-src/src/styles/index.scss
@@ -46,6 +46,10 @@ a {
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-block: 0;
+}
+
 // USA BANNER STYLES
 
 .ds-c-usa-banner__header {
